# cactus-mc-launcher

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MONOREPO.md  PLAY_TOGETHER.md  README.md  RELEASING.md  TESTING.md  package.json  playwright.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml  tests.yml
.husky/: pre-commit
.storybook/: preview.ts
docs/screenshots/: README.md
e2e/: home.spec.ts
flatpak/: README.md  com.ladvace.cactuslauncher.metainfo.xml  com.ladvace.cactuslauncher.yml
scripts/: extract_sprites.py  screenshot.py
src/: app.css  app.html
src-tauri/: .env.example  .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: achievements.rs  board_auth.rs  commands.rs  error.rs  friends.rs  http.rs  lib.rs  link.rs  main.rs  news.rs  paths.rs  players.rs  restore.rs  server_browse.rs  server_ping.rs  servers_dat.rs  settings.rs  snapshot.rs  stickers.rs  streamer_auth.rs  tuneup.rs  tunnel.rs  worlds.rs
src-tauri/src/auth/: microsoft.rs  mod.rs  xbox.rs
src-tauri/src/content/: cache.rs  mod.rs
src-tauri/src/data/: advancements.json  custom_achievements.json
src-tauri/src/instance/: mod.rs  store.rs
src-tauri/src/launch/: args.rs  assets.rs  branding.rs  download.rs  java.rs  libraries.rs  mod.rs  process.rs  rules.rs  server.rs
src-tauri/src/loader/: forge.rs  mod.rs
src-tauri/src/minecraft/: mod.rs  version.rs
src-tauri/src/modrinth/: mod.rs
src-tauri/src/sources/: curseforge.rs  ftb.rs  mod.rs
src/lib/: api.ts  background.test.ts  background.ts  boardApi.ts  changelog.ts  clipboard.ts  crafting.ts  decor.ts  dialog.ts  format.test.ts  format.ts  funnyNames.ts  image.ts  importedFrom.ts  java.ts  links.ts  platform.ts  serverAddress.test.ts  serverAddress.ts  servers.ts  skin.ts  slider.ts  sound.ts  storage.ts  streamerApi.ts  themes.test.ts  themes.ts  time.ts  types.ts
src/lib/components/: AccountModal.svelte  BoardView.svelte  CactusLink.svelte  ChangelogModal.svelte  CommandPalette.svelte  ContextMenu.svelte  CraftingTable.svelte  CreateInstanceModal.svelte  DecorLayer.svelte  Dock.svelte  Flag.svelte  FolderOverlay.svelte  FriendsList.svelte  GroupContextMenu.svelte  GroupPicker.svelte  HomeGrid.svelte  Icon.stories.svelte  Icon.svelte  InstanceCard.svelte  InstanceCardSkeleton.svelte  InstanceContextMenu.svelte  InstanceGrid.svelte  InstanceIcon.stories.svelte  InstanceIcon.svelte  InstanceJavaSettings.svelte  InstancePicker.svelte  InstancePicker.test.ts  LanguageSelect.svelte  LoaderIcon.stories.svelte  LoaderIcon.svelte  Modal.svelte  NewsSection.svelte  Onboarding.svelte  PlayersList.svelte  PresencePanel.svelte  ProgressBar.svelte  ProjectModal.svelte  Select.svelte  ServerAddress.svelte  ServerProperties.svelte  (+14 more)
src/lib/i18n/: index.ts
src/lib/stores/: accounts.svelte.ts  boardAuth.svelte.ts  crafting.svelte.ts  followedBoards.svelte.ts  followedBoards.test.ts  groupCovers.svelte.ts  groupCovers.test.ts  install.svelte.ts  instanceLayout.svelte.ts  instanceLayout.test.ts  instances.svelte.ts  (+9 more)
src/routes/: +layout.svelte  +page.svelte
src/test/: setup.ts
(+24 files in other folders)
