[package]
name = "cactus-launcher"
version = "1.5.0"
description = "Cactus Launcher — a Minecraft launcher"
authors = ["Ladvace"]
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cactus_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"], default-features = false }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
zip = "2"
sha1 = "0.10"
sha2 = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
hex = "0.4"
md-5 = "0.10"
base64 = "0.22"
ngrok = "0.19.0"
tauri-plugin-dialog = "2.7.1"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
fastnbt = "2.6.2"


# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
